--- a/src/HomeBase/appsettings.json
+++ b/src/HomeBase/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HomeBase-91d47dd9-bd9a-44ea-af2d-d567a7b99032;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HomeBase2;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   },
   "Logging": {
     "IncludeScopes": false,
