--- a/src/HomeBase/appsettings.json
+++ b/src/HomeBase/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HomeBase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HomeBase2;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
   "Logging": {
