--- a/src/HomeBase/project.json
+++ b/src/HomeBase/project.json
@@ -42,7 +42,8 @@
       "version": "1.1.0"
     },
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0"
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
+    "Microsoft.DotNet.InternalAbstractions": "1.0.0"
   },
 
   "tools": {
